--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,6 @@
     }
   ],
   "env": {
-    "VITE_API_BASE_URL": "@backend_url"
+    "VITE_API_BASE_URL": "https://ai-backend-mu-self.vercel.app"
   }
 }
