--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,9 @@
       "destination": "/index.html"
     }
   ],
-  "env": {
-    "VITE_API_BASE_URL": "https://ai-backend-mu-self.vercel.app"
+  "build": {
+    "env": {
+      "VITE_API_BASE_URL": "https://ai-backend-mu-self.vercel.app"
+    }
   }
 }
