Add CORS headers to Vercel configuration for API requests to enhance security and allow cross-origin access.

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,17 @@
       "destination": "/index.html"
     }
   ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://ai-backend-mu-self.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
+    }
+  ],
   "build": {
     "env": {
       "VITE_API_BASE_URL": "https://ai-backend-mu-self.vercel.app"
